# p8-octree

./: CMakeLists.txt  README.md  head.h  main.c  ppm.c  src.c  temps.c
img/: makefile
